# fake-ld

./: Cargo.toml  README.md
src/: cc.rs  gcc_forwarder.rs  main.rs  rust-zip.rs  zig_cc.rs
