[package]
name = "fake-ld"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "fake-ld"
path = "src/main.rs"

[[bin]]
name = "cc"
path = "src/gcc_forwarder.rs"

[[bin]]
name = "rust-zip"
path = "src/rust-zip.rs"

[dependencies]
zip = "0.5.12"
