[package]
name = "fake-ld"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "fake-ld"
path = "src/main.rs"

#[[bin]]
#name = "cc"
#path = "src/gcc_forwarder.rs"
#required-features = ["gcc-forwarder"]

[[bin]]
name = "cc"
path = "src/cc.rs"

[[bin]]
name = "rust-zip"
path = "src/rust-zip.rs"

[[bin]]
name = "gcc"
path = "src/main.rs"
required-features = ["fake-gcc"]

[dependencies]
zip = "0.5.12"

[features]
fake-gcc = []
gcc-forwarder = []
